--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 requests~=2.28.2
-selenium~=4.8.2
 setuptools~=65.5.1
 mysqlclient~=2.1.1
 python-dotenv~=1.0.0
-scikit-learn~=1.2.2
 Flask~=2.2.3
 fuzzywuzzy~=0.18.0
+uuid~=1.30
+geopy~=2.3.0
