--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 requests~=2.28.2
 setuptools~=65.5.1
-mysqlclient~=2.1.1
 python-dotenv~=1.0.0
 Flask~=2.2.3
 fuzzywuzzy~=0.18.0
 uuid~=1.30
 geopy~=2.3.0
 waitress~=2.1.2
+mysql~=0.0.3
+mysql-connector-python~=8.0.32
